# udemy-langchain

./: .tool-versions  README.md  pyproject.toml
.chroma/index/: id_to_uuid_ea4d1688-b684-4da6-97cd-1580078ff967.pkl  index_metadata_ea4d1688-b684-4da6-97cd-1580078ff967.pkl  uuid_to_id_ea4d1688-b684-4da6-97cd-1580078ff967.pkl
data/: botch.txt
src/: chatbot_engine.py  gradio_app.py  hello.py
