[tool.poetry]
name = "udemy-langchain"
version = "0.1.0"
description = ""
authors = ["ShotaHirabayashi <bys.888812@gmail.com>"]
readme = "README.md"
packages = [{include = "udemy_langchain"}]

[tool.poetry.dependencies]
python = "3.11.3"
gradio = "3.31.0"
python-dotenv = "1.0.0"
langchain = "0.0.172"
openai = "0.27.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
